Fixed scroll cut off
Fixed scroll cut off

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -56,10 +56,11 @@ h7 {
 }
 
 .page-container {
-    position: relative;
+    position: absolute;
     background: transparent;
     height: 0px;
     width: 100%;
+    top: 115px;
 }
 
 .page-container.expanded {
@@ -70,8 +71,9 @@ h7 {
     position: absolute;
     background: transparent;
     width: 100%;
-    height: 100%;
     overflow-y: scroll;
+    top: 0px;
+    bottom: 115px;
 }
 
 .page.ng-enter,
